--- a/src/css/main.less
+++ b/src/css/main.less
@@ -171,6 +171,9 @@ html, body{
 				&.plus{
 					background: hsl(100, @s, @l, 0);
 				}
+				&.zero{
+					background: #CCC;
+				}
 			}
 			.category{
 				background: #EEE;
