scoreの表示色を値に応じてかえる

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -164,10 +164,10 @@ html, body{
 				@s: 50%;
 				@l: 45%;
 				&.minus{
-					background: hsl(0, @s, @l, 0);
+					background: hsl(0, @s, @l);
 				}
 				&.plus{
-					background: hsl(100, @s, @l, 0);
+					background: hsl(100, @s, @l);
 				}
 				&.zero{
 					background: #CCC;
