--- a/src/css/main.less
+++ b/src/css/main.less
@@ -16,7 +16,7 @@ a{
 }
 h1{
 	font-size: 1rem;
-	margin: @baseMargin 0 0 0;
+	margin: 0 0 @baseMargin 0;
 	text-align: center;
 	font-weight: bold;
 	a{
@@ -113,9 +113,8 @@ h3{
 			@width: 70px;
 			@height: @width;
 			@color: @hatenaColor;//rgba(127,127,127, 0.5);
-			animation: rotate 1s linear;
+			animation: rotate 1s linear infinite;
 			animation-fill-mode: both;
-			animation-iteration-count: infinite;
 			top: 200px;
 			left: 0;
 			right: 0;
