--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,9 +1,10 @@
 @import 'reset';
 @baseMargin: 0.5rem;
 @hatenaColor: #008ede;
+@btnBorderColor: rgba(0, 0, 0, 0.5);
 html, body{
 	font-size: 15px;
-	height: 100%;
+	//height: 100%;
 }
 html{
 	background: #E0E0E0;
@@ -36,8 +37,57 @@ h3{
 	margin: 0 auto;
 	background: #FFF;
 	min-height: 100%;
+	overflow: hidden;
 }
+.btn{
+	@btnSelectedBgColor: @hatenaColor;
+	@btnSelectedFontColor: #FFF;
+	@btnBgColor: #EEE;
+	@btnFontColor: #333;
+	@btnAnimeDuration: 200ms;
+	@btnSelectedShadow: inset 0px 0px 5px rgba(0, 0, 0, 0.5);
+	@btnShadow: inset 0px 0px 5px rgba(0, 0, 0, 0);
 
+	@btnShadowColor: rgba(0, 0, 0, 0.5);
+	@btnBorder: 1px solid @btnBorderColor;
+	@fontSize: .933333333rem;
+	@height: @fontSize * 2;
+	font-size: @fontSize;
+	display: inline-block;
+	height: @height;
+	line-height: @height;
+	padding: 0 0.5em;
+	text-align: center;
+	cursor: pointer;
+	background: @btnBgColor;
+	color: @btnFontColor;
+	box-sizing: border-box;
+	border: 1px solid rgba(0, 0, 0, 0);
+
+	/*@keyframes btnSelect{
+		from{
+			box-shadow: @btnShadow;
+			background: @btnBgColor;
+			color: @btnFontColor;
+		}
+		to{
+			box-shadow: @btnSelectedShadow;
+			background: @btnSelectedBgColor;
+			color: @btnSelectedFontColor;
+		}
+	}*/
+	&.selected{
+		box-shadow: @btnSelectedShadow;
+		background: @btnSelectedBgColor;
+		color: @btnSelectedFontColor;
+		/*animation: btnSelect @btnAnimeDuration linear;
+		animation-fill-mode: forwards;*/
+		border: @btnBorder;
+	}
+	&:hover{
+		border: @btnBorder;
+	}
+}
 .ui{
 	display: flex;
 	flex-flow:row wrap;
@@ -46,55 +96,6 @@ h3{
    		flex: 0 0 auto;
   		margin-bottom: @baseMargin;
 		&.viewMode{
-		}
-	}
-	.btn{
-		@btnSelectedBgColor: @hatenaColor;
-		@btnSelectedFontColor: #FFF;
-		@btnBgColor: #EEE;
-		@btnFontColor: #333;
-		@btnAnimeDuration: 200ms;
-		@btnSelectedShadow: inset 0px 0px 5px rgba(0, 0, 0, 0.5);
-		@btnShadow: inset 0px 0px 5px rgba(0, 0, 0, 0);
-
-		@btnShadowColor: rgba(0, 0, 0, 0.5);
-		@btnBorder: 1px solid rgba(0, 0, 0, 0.5);
-
-		@height: 36px;
-		font-size: 0.9rem;
-		display: inline-block;
-		height: @height;
-		line-height: @height;
-		padding: 0 0.5em;
-		text-align: center;
-		cursor: pointer;
-		background: @btnBgColor;
-		color: @btnFontColor;
-		box-sizing: border-box;
-		border: 1px solid rgba(0, 0, 0, 0);
-
-		@keyframes btnSelect{
-			from{
-				box-shadow: @btnShadow;
-				background: @btnBgColor;
-				color: @btnFontColor;
-			}
-			to{
-				box-shadow: @btnSelectedShadow;
-				background: @btnSelectedBgColor;
-				color: @btnSelectedFontColor;
-			}
-		}
-		&.selected{
-			box-shadow: @btnSelectedShadow;
-			background: @btnSelectedBgColor;
-			color: @btnSelectedFontColor;
-			animation: btnSelect @btnAnimeDuration linear;
-			animation-fill-mode: forwards;
-			border: @btnBorder;
-		}
-		&:hover{
-			border: @btnBorder;
 		}
 	}
 }
@@ -163,7 +164,6 @@ h3{
 		.feedItem{
 			margin-top: @baseMargin * 2;
 			padding-bottom: @baseMargin * 2;
-			border-bottom: 1px solid #CCC;
 			word-wrap: break-word;
 			&:last-child{
 				border: none;
@@ -213,6 +213,7 @@ h3{
 					color: #ff2d2d;
 					font-weight: bold;
 					background: #fdd;
+					opacity:0.8;
 					.count{
 						font-size: 110%;
 					}
@@ -237,6 +238,87 @@ h3{
 				}
 				.category{
 					background: #EEE;
+				}
+			}
+			.bookmarkComments{
+				min-height: 24px;
+				.showBookmarkCommentsBtn{
+					.btn;
+					@fontSize: 0.8rem;
+					@height: @fontSize * 2;
+					width:100%;
+					font-size: @fontSize;
+					height: @height;
+					line-height: @height;
+					margin-top: @baseMargin;
+					border: 1px solid #CCC;
+				}
+				.comments{
+					transition:height 200ms ease-out;
+					padding:0 2px;
+					overflow-x: hidden;
+					overflow-y: auto;
+					height: 0;
+					font-size: 13px;
+					-webkit-overflow-scrolling: touch;
+					&.open{
+						border: 1px solid #CCC;
+					}
+					.comment{
+						padding: 8px 10px 8px 40px;
+						border-bottom: 1px solid #CCC;
+						&:last-child{
+							border-bottom: none;
+						}
+						.profileIcon{
+							@height: 24px;
+							float: left;
+							display: block;
+							position: relative;
+							margin-left: -36px;
+							border: 1px solid #CCC;
+							line-height: @height;
+							height: @height;
+							width: @height;
+						}
+						.commentBox{
+							line-height: 18px;
+							.name
+							.tags{
+								display: inline-block;
+							}
+							.name{
+								margin-right: 1ex;
+							}
+							.commentBody{
+
+							}
+							.tags{
+								font-size: 12px;
+								.tag{
+									color: #AAA;
+									margin-left: 3px;
+									&:last-child{
+										margin-right: 0;
+									}
+								}
+							}
+						}
+						.info{
+							font-size: 12px;
+							a{
+								color: #AAA;
+								&.permalink{
+									margin-right: 3px;
+								}
+							}
+						}
+					}
+					.noComment{
+						text-align: center;
+						font-size: 13px;
+						color: #AAA;
+					}
 				}
 			}
 		}
