--- a/src/css/main.less
+++ b/src/css/main.less
@@ -251,7 +251,8 @@ h3{
 					height: @height;
 					line-height: @height;
 					margin-top: @baseMargin;
-					border: 1px solid #CCC;
+					background: #EEE;
+					color: #AAA;
 				}
 				.comments{
 					transition:height 200ms ease-out;
