--- a/src/css/main.less
+++ b/src/css/main.less
@@ -4,7 +4,7 @@
 @btnBorderColor: rgba(0, 0, 0, 0.5);
 html, body{
 	font-size: 15px;
-	//height: 100%;
+	height: 100%;
 }
 html{
 	background: #E0E0E0;
@@ -38,6 +38,7 @@ h3{
 	background: #FFF;
 	min-height: 100%;
 	overflow: hidden;
+	box-sizing: border-box;
 }
 .btn{
 	@btnSelectedBgColor: @hatenaColor;
@@ -100,6 +101,8 @@ h3{
 	}
 }
 .feedList{
+	@feedListHeight: 300px;
+	min-height: 300px;
 	&.loading{
 		position: relative;
 		.loadingAnime{
@@ -116,7 +119,7 @@ h3{
 			@color: @hatenaColor;//rgba(127,127,127, 0.5);
 			animation: rotate 1s linear infinite;
 			animation-fill-mode: both;
-			top: 200px;
+			top: (@feedListHeight - @height) / 2;
 			left: 0;
 			right: 0;
 			margin: 0 auto;
@@ -153,7 +156,7 @@ h3{
 			}
 
 		}
-		.feedItem{
+		.feedListBox{
 			visibility: hidden;
 		}
 	}
@@ -363,6 +366,17 @@ h3{
 .globalFooter{
 	text-align: center;
 	margin-bottom: @baseMargin;
+	.siteMap{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		li{
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			display: block;
+		}
+	}
 	small{
 		opacity: 0.8;
 	}
