--- a/src/css/main.less
+++ b/src/css/main.less
@@ -364,6 +364,7 @@ h3{
 	}
 }
 .globalFooter{
+	font-size: 0.75rem;
 	text-align: center;
 	margin-bottom: @baseMargin;
 	.siteMap{
@@ -375,9 +376,13 @@ h3{
 			padding: 0;
 			list-style: none;
 			display: block;
+			a{
+
+			}
 		}
 	}
 	small{
 		opacity: 0.8;
+		font-size: 100%;
 	}
 }
