--- a/src/css/main.less
+++ b/src/css/main.less
@@ -75,7 +75,7 @@ h3{
 			color: @btnSelectedFontColor;
 		}
 	}*/
-	&.selected
+	&.selected{
 		box-shadow: @btnSelectedShadow;
 		background: @btnSelectedBgColor;
 		color: @btnSelectedFontColor;
