--- a/src/css/valiables.less
+++ b/src/css/valiables.less
@@ -1,3 +1,5 @@
 @baseMargin: 0.5rem;
 @hatenaColor: #008ede;
 @btnBorderColor: rgba(0, 0, 0, 0.5);
+@btnFontSize: .933333333rem;
+@btnBgColor: #EEE;
