--- a/src/css/main.less
+++ b/src/css/main.less
@@ -133,7 +133,7 @@ h1{
 			}
 			@width: 70px;
 			@height: @width;
-			@color: @hatenaColor;//rgba(127,127,127, 0.5);
+			@color: @hatenaColor;
 			animation: rotate 1s linear infinite;
 			animation-fill-mode: both;
 			top: (@feedListHeight - @height) / 2;
