フィルタまわりの調整

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -134,6 +134,9 @@ h1{
 				flex-flow:row wrap;
 				justify-content: flex-start;
 				.inputBox{
+					&.disabled .disableable{
+						opacity: 0.5;
+					}
 					flex: 0.1 0 auto;
 					label{
 						font-size: small;
